# AMD_HACKERTHON_APP

./: .dockerignore  .env.example  .gitignore  Dockerfile.submission  Dockerfile.ui  Dockerfile.version5  Dockerfile.version5-ollama  Dockerfile.version6  Dockerfile.version6-ui  Dockerfile.version7  README.md  compose.dev.yml  compose.ui.yml  pyproject.toml
audit/: model-acquisition-status.json  ollama-gguf-import-status.json  pipeline.json
benchmarks/: scenarios.json
demo/: index.html
deploy/: amd-hackathon-demo.service
docs/: BENCHMARK_STATUS.md  CATEGORIZATION_RISK.md  CONTAINER_PACKAGING.md  ENVIRONMENT_PREFLIGHT.md  FIREWORKS_MODEL_RESOURCES.md  MODEL_REGISTRY_STATUS.md  OLLAMA_GGUF_IMPORT.md  OPEN_QUESTIONS.md  VERSION6_STAGING_OLLAMA_CLOUD.md  VERSION6_SUBMISSION_RUNTIME.md  VERSION7_MODE1_EXPERIMENT_REPORT.md  algorithm.json  allowed-models.json  concept.json  repo-structure.json  version5-local-first-candidate.json  version5_authority_analytics.json  version6_submission_analytics.json
memory/: project-doctrine.md  routing-policy.md
scripts/: advance-pipeline.sh  audit-ollama-gguf.py  benchmark-profiles.sh  benchmark-version-candidates.sh  inspect-version6-image.sh  lemonade.sh  model-acquisition.py  pull-candidate-models.sh  run-version6-staging-e2e.sh  setup-lemonade.sh  show-pipeline.py  stage-version5-model.sh  stage-version5-ollama-runtime.sh  start-version6-analytics-ui.sh  stop-ollama.sh  validate-app.sh  verify-lemonade.sh  verify-version5-image.sh  verify-version5-ollama-image.sh  verify-version6-images.sh  verify-version7-image.sh  (+2 more)
(+38 files in other folders)
