[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amd-hackathon-app"
version = "0.1.0"
description = "AMD Hackathon Track 1 Most Innovative Routing System"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
amd-router = "amd_hackathon_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
amd_hackathon_app = ["authorization/*.json"]
